# pascal-delphi_wiki_RAG_opencode_generator

./: AGENTS.md  PROJECT_COMPONENTS_DESCRIPTION.md  README.md
.config/: ai-descr.local.conf  ai-descr.openai-compatible.example.conf  ai-descr.openrouter.example.conf  rag-pipeline.local.conf
code/agent/: opencode.fragment_example.json
code/mcp/markdown-rag-mcp-wrapper/: .gitignore  README.md  pyproject.toml  server.py
code/pipeline/: RAG_ARCHITECTURE.md  README.md  build-wiki-rag.sh  check-rag.sh  rag-pipeline.example.conf
code/wiki/: ai-descr-ai-v3-config-rag-md-v3.sh
tools/: README.md
tools/markdown-rag-mcp/: .env.example  .gitignore  ARCHITECTURE.md  CLI.md  LICENSE  README.md  pyproject.toml
tools/markdown-rag-mcp/.claude/: settings.local.json
tools/markdown-rag-mcp/.specify/templates/: plan-template.md
tools/markdown-rag-mcp/docker/: Dockerfile.dev
tools/markdown-rag-mcp/examples/: README.md  incremental_indexing_demo.py  milvus_embeddings_demo.py
tools/markdown-rag-mcp/specs/: README.md
tools/markdown-rag-mcp/specs/001-markdown-rag-system/: plan.md  quickstart.md  spec.md  tasks.md
tools/markdown-rag-mcp/specs/001-markdown-rag-system/contracts/: cli-interface.md  library-api.md
tools/markdown-rag-mcp/src/markdown_rag_mcp/: __init__.py
tools/markdown-rag-mcp/src/markdown_rag_mcp/cli/: __init__.py  (+1 more)
tools/markdown-rag-mcp/tests/embeddings/: test_langchain_adapter.py
tools/markdown-rag-mcp/tests/indexing/: __init__.py  test_change_detector.py  test_chunker.py  test_incremental_indexer.py  test_indexer.py  test_metadata_enhancer.py
(+18 files in other folders)
